# plinycompute

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SConstruct  SConstruct.linearAlgebra  clear-tests.sh  coding_standard.md  docker-compose.yml  pdbCluster.config  pdbClusterCleanup.sh  pdbClusterStartup.sh  pdbSettings.conf  pdbStartup.sh  query.txt  run-tests.sh
applications/StandardTPCHBench/: CMakeLists.txt  RunQuery01.cc  RunQuery02.cc  RunQuery03.cc  RunQuery04.cc  RunQuery06.cc  RunQuery12.cc  RunQuery13.cc  RunQuery14.cc  RunQuery17.cc  RunQuery22.cc  add_license.sh  tpchDataLoader.cc  tpchDataPartitioner.cc
applications/StandardTPCHBench/sharedLibraries/headers/: LineItemPartitionComp.h  LineItemPartitionTransformationComp.h  Query01.h  Query02.h  Query03.h  Query04.h  Query06.h  Query12.h  Query13.h  Query14.h  Query17.h  Query22.h  TPCHSchema.h
applications/StandardTPCHBench/sharedLibraries/source/: LineItemPartitionComp.cc  LineItemPartitionTransformationComp.cc  MinDouble.cc  Q01Agg.cc  Q01AggOut.cc  Q01KeyClass.cc  Q01ValueClass.cc  Q02MinAgg.cc  Q02MinCostJoin.cc  Q02MinCostJoinOutput.cc  Q02MinCostPerTPCHPart.cc  Q02MinCostSelection.cc  Q02MinCostSelectionOutput.cc  Q02TPCHNationJoin.cc  Q02TPCHPartJoin.cc  Q02TPCHPartJoinOutput.cc  Q02TPCHPartJoinOutputIdentitySelection.cc  Q02TPCHPartSelection.cc  Q02TPCHPartSuppJoin.cc  Q02TPCHPartSuppJoinOutput.cc  Q02TPCHRegionSelection.cc  Q02TPCHSupplierJoin.cc  Q02TPCHSupplierJoinOutput.cc  Q03Agg.cc  Q03AggOut.cc  Q03Join.cc  Q03JoinOut.cc  Q03KeyClass.cc  Q03TPCHCustomerSelection.cc  Q03TPCHLineItemSelection.cc  Q03TPCHOrderSelection.cc  Q04Agg.cc  Q04AggOut.cc  Q04Join.cc  Q04TPCHOrderSelection.cc  Q06Agg.cc  Q06TPCHLineItemSelection.cc  Q12Agg.cc  Q12AggOut.cc  Q12Join.cc  (+37 more)
applications/TPCHBench/: CMakeLists.txt  JaccardMain.cc  query.txt  tpchDataGenerator.cc  tpchDataGeneratorAll.cc  tpchDataGeneratorNew.cc  tpchFlushToDisk.cc  tpchGetCustomerCount.cc  tpchJaccard.cc  tpchQuery.cc  tpchRegisterAndCreateSets.cc
applications/TPCHBench/sharedLibraries/headers/: AllParts.h  CountAggregation.h  CountCustomer.h  Customer.h  CustomerMultiSelection.h  CustomerSupplierPartGroupBy.h  CustomerWriteSet.h  LineItem.h  Order.h  Supplier.h  SupplierData.h  SupplierInfo.h  TopJaccard.h
applications/TPCHBench/sharedLibraries/source/: AllParts.cc  CustomerMultiSelection.cc  CustomerSupplierPartGroupBy.cc  JaccardResultWriter.cc  LineItem.cc  Order.cc  ScanCustomerSet.cc  SumResultWriteSet.cc  Supplier.cc  SupplierInfoWriteSet.cc  TopJaccard.cc
applications/TestGMM/: CMakeLists.txt  TestGmmLazy.cc  TestGmmLoadData.cc
applications/TestGMM/sharedLibraries/headers/: GmmAggregateDatapoint.h  GmmAggregateLazy.h  GmmDataCountAggregate.h  GmmModel.h
applications/TestGMM/sharedLibraries/source/: GmmAggregateDatapoint.cc  GmmAggregateLazy.cc  GmmAggregateNewComp.cc  GmmAggregateOutputLazy.cc  GmmDataCountAggregate.cc  GmmModel.cc  GmmSampleSelection.cc
applications/TestLA/: CMakeLists.txt  README.md  TestLA01_Transpose.cc  TestLA02_Add.cc  TestLA03_Substract.cc  TestLA04_Multiply.cc  TestLA05_MaxElement.cc  TestLA06_MinElement.cc  TestLA07_TransposeMultiply.cc  TestLA07_TransposeMultiply_Gram.cc  TestLA08_RowMax.cc  TestLA09_RowMin.cc  TestLA10_ColMax.cc  TestLA11_ColMin.cc  TestLA12_DuplicateRow.cc  TestLA13_DuplicateCol.cc  TestLA14_Inverse.cc  TestLA15_ScaleMultiply.cc  TestLA16_RowSum.cc  TestLA17_ColSum.cc  TestLA21_Instance.cc
applications/TestLA/linearAlgebraDSL/headers/: LAExpressionNode.h  LAIdentifierNode.h  LALexerTokens.h  LAMultiplicativeExpressionNode.h  LAPDBInstance.h  LAParserHelperFunctions.h  LAStatementNode.h
applications/TestLA/linearAlgebraDSL/source/: LALexer.l  LAParser.y  LAParserHelperFunctions.cc
applications/TestLA/sharedLibraries/headers/: LAAddJoin.h  LAColMaxAggregate.h  LAColMinAggregate.h  LAColSumAggregate.h  LADuplicateRowMultiSelection.h  LAInverse1Aggregate.h  LAInverse2Selection.h  LAMaxElementAggregate.h  LAMaxElementOutputType.h  LAMinElementAggregate.h  LAMinElementOutputType.h  LAMultiply2Aggregate.h  LARowMaxAggregate.h  LARowMinAggregate.h  LARowSumAggregate.h  LAScanMatrixBlockSet.h  LASingleMatrix.h  LATransposeMultiply1Join.h  LAWriteMaxElementSet.h  MatrixBlock.h  MatrixData.h  MatrixMeta.h
applications/TestLA/sharedLibraries/source/: LAColMaxAggregate.cc  LAColMinAggregate.cc  LAColSumAggregate.cc  LADuplicateRowMultiSelection.cc  LAInverse1Aggregate.cc  LAInverse3MultiSelection.cc  LAMaxElementAggregate.cc  LAMaxElementOutputType.cc  LAMinElementAggregate.cc  LAMinElementOutputType.cc  LAMultiply1Join.cc  LARowMaxAggregate.cc  LARowSumAggregate.cc  LAScanMatrixBlockSet.cc  LASingleMatrix.cc  LASubstractJoin.cc  LATransposeMultiply1Join.cc  LAWriteMaxElementSet.cc  MatrixData.cc
applications/TestLA/tests/: TestLA_Instance.cc  TestLA_Parser.cc  TestLA_unit01_Transpose.cc  TestLA_unit02_Add.cc  TestLA_unit03_Substract.cc  TestLA_unit04_Multiply.cc  TestLA_unit05_MaxElement.cc  TestLA_unit06_MinElement.cc  TestLA_unit07_ScaleMultiply.cc  TestLA_unit08_RowMax.cc  TestLA_unit09_RowMin.cc  TestLA_unit10_ColMax.cc  TestLA_unit11_ColMin.cc  TestLA_unit12_DuplicateRow.cc  TestLA_unit13_DuplicateCol.cc  TestLA_unit14_Inverse.cc  TestLA_unit15_RowSum.cc  TestLA_unit16_ColSum.cc  TestLA_unit17_TransposeMultiply.cc  TestLA_unit18_TransposeMultiply_Gram.cc
applications/TestLDA/: CMakeLists.txt  TestLDA.cc
conf/: jia-test-key.pem  (+4 more)
tests/unit/: CMakeLists.txt  Test12.cc  Test16.cc  Test3.cc  Test6.cc  TestAdvancedPhysicalGraph.cc  TestAdvancedPhysicalPlanning.cc  TestCatalog1.cc  TestMap.cc  TestMapClassic.cc  TestMapClassic1.cc  TestObjectModel1.cc  TestObjectModel2.cc  TestObjectModel4.cc  TestObjectModel5.cc  TestObjectModel6.cc  TestObjectModelBoost1.cc  TestObjectModelBoost2.cc  TestObjectModelBoost3.cc  TestObjectModelClassic1.cc  TestObjectModelClassic2.cc  TestObjectModelClassic6.cc  TestPageWrite.cc  TestPrologGenerator.cc  TestReflection.cc  TestStringClass..cc  TestTCAPGeneration.cc  TestUserGraphAnalysis.cc
tools/cLion2016/pdb/: CMakeLists.txt
(+2496 files in other folders)
