###
### SharedObjects
###

# compile all the objects
file(GLOB files "${PROJECT_SOURCE_DIR}/applications/StandardTPCHBench/sharedLibraries/source/*.cc")
foreach(file ${files})
    get_filename_component(fileName "${file}" NAME_WE)
    add_library(${fileName} MODULE ${file})
    target_link_libraries(${fileName} pdb-shared-common)
    target_link_libraries(${fileName} ${GSL_LIBRARIES})
    add_dependencies(shared-libraries ${fileName})
endforeach()



# create the target
add_pdb_application(tpchDataLoader)
add_pdb_application(RunQuery01)
add_pdb_application(RunQuery02)
add_pdb_application(RunQuery03)
add_pdb_application(RunQuery04)
add_pdb_application(RunQuery06)
add_pdb_application(RunQuery12)
add_pdb_application(RunQuery13)
add_pdb_application(RunQuery14)
add_pdb_application(RunQuery17)
add_pdb_application(RunQuery22)


add_dependencies(build-standard-tpch-tests tpchDataLoader)


add_dependencies(tpchDataLoader TPCHCustomer)
add_dependencies(tpchDataLoader TPCHLineItem)
add_dependencies(tpchDataLoader MinDouble)
add_dependencies(tpchDataLoader TPCHNation)
add_dependencies(tpchDataLoader TPCHOrder)
add_dependencies(tpchDataLoader TPCHPart)
add_dependencies(tpchDataLoader TPCHPartSupp)
add_dependencies(tpchDataLoader Q01Agg)
add_dependencies(tpchDataLoader Q01AggOut)
add_dependencies(tpchDataLoader Q01KeyClass)
add_dependencies(tpchDataLoader Q01ValueClass)
add_dependencies(tpchDataLoader Q02MinAgg)
add_dependencies(tpchDataLoader Q02MinCostJoin)
add_dependencies(tpchDataLoader Q02MinCostJoinOutput)
add_dependencies(tpchDataLoader Q02MinCostPerTPCHPart)
add_dependencies(tpchDataLoader Q02MinCostSelection)
add_dependencies(tpchDataLoader Q02MinCostSelectionOutput)
add_dependencies(tpchDataLoader Q02TPCHNationJoin)
add_dependencies(tpchDataLoader Q02TPCHPartJoin)
add_dependencies(tpchDataLoader Q02TPCHPartJoinOutput)
add_dependencies(tpchDataLoader Q02TPCHPartJoinOutputIdentitySelection)
add_dependencies(tpchDataLoader Q02TPCHPartSelection)
add_dependencies(tpchDataLoader Q02TPCHPartSuppJoin)
add_dependencies(tpchDataLoader Q02TPCHPartSuppJoinOutput)
add_dependencies(tpchDataLoader Q02TPCHRegionSelection)
add_dependencies(tpchDataLoader Q02TPCHSupplierJoin)
add_dependencies(tpchDataLoader Q02TPCHSupplierJoinOutput)
add_dependencies(tpchDataLoader Q03Agg)
add_dependencies(tpchDataLoader Q03AggOut)
add_dependencies(tpchDataLoader Q03TPCHCustomerSelection)
add_dependencies(tpchDataLoader Q03Join)
add_dependencies(tpchDataLoader Q03JoinOut)
add_dependencies(tpchDataLoader Q03KeyClass)
add_dependencies(tpchDataLoader Q03TPCHLineItemSelection)
add_dependencies(tpchDataLoader Q03TPCHOrderSelection)
add_dependencies(tpchDataLoader Q04Agg)
add_dependencies(tpchDataLoader Q04AggOut)
add_dependencies(tpchDataLoader Q04Join)
add_dependencies(tpchDataLoader Q04TPCHOrderSelection)
add_dependencies(tpchDataLoader Q06Agg)
add_dependencies(tpchDataLoader Q06TPCHLineItemSelection)
add_dependencies(tpchDataLoader Q12Agg)
add_dependencies(tpchDataLoader Q12AggOut)
add_dependencies(tpchDataLoader Q12Join)
add_dependencies(tpchDataLoader Q12JoinOut)
add_dependencies(tpchDataLoader Q12TPCHLineItemSelection)
add_dependencies(tpchDataLoader Q12ValueClass)
add_dependencies(tpchDataLoader Q13CountResult)
add_dependencies(tpchDataLoader Q13TPCHCustomerDistribution)
add_dependencies(tpchDataLoader Q13TPCHCustomerTPCHOrderJoin)
add_dependencies(tpchDataLoader Q13TPCHCustomerTPCHOrders)
add_dependencies(tpchDataLoader Q13TPCHOrderSelection)
add_dependencies(tpchDataLoader Q13TPCHOrdersPerTPCHCustomer)
add_dependencies(tpchDataLoader Q14Agg)
add_dependencies(tpchDataLoader Q14AggOut)
add_dependencies(tpchDataLoader Q14Join)
add_dependencies(tpchDataLoader Q14JoinOut)
add_dependencies(tpchDataLoader Q14TPCHLineItemSelection)
add_dependencies(tpchDataLoader Q14ValueClass)
add_dependencies(tpchDataLoader Q17JoinedTPCHPartTPCHLineItem)
add_dependencies(tpchDataLoader Q17TPCHLineItemAvgQuantity)
add_dependencies(tpchDataLoader Q17TPCHPartTPCHLineItemAvgJoin)
add_dependencies(tpchDataLoader Q17TPCHPartTPCHLineItemIdentitySelection)
add_dependencies(tpchDataLoader Q17TPCHPartTPCHLineItemJoin)
add_dependencies(tpchDataLoader Q17TPCHPartSelection)
add_dependencies(tpchDataLoader Q17PriceSum)
add_dependencies(tpchDataLoader Q22AggregatedCntryBal)
add_dependencies(tpchDataLoader Q22CntryBalAgg)
add_dependencies(tpchDataLoader Q22CntryBalJoin)
add_dependencies(tpchDataLoader Q22TPCHCustomerAccbalAvg)
add_dependencies(tpchDataLoader Q22JoinedCntryBal)
add_dependencies(tpchDataLoader Q22TPCHOrderCountPerTPCHCustomer)
add_dependencies(tpchDataLoader Q22TPCHOrderCountSelection)
add_dependencies(tpchDataLoader TPCHRegion)
add_dependencies(tpchDataLoader TPCHSupplier)

add_dependencies(build-standard-tpch-tests RunQuery01)
add_dependencies(RunQuery01 Q01Agg)
add_dependencies(RunQuery01 Q01AggOut)
add_dependencies(RunQuery01 Q01KeyClass)
add_dependencies(RunQuery01 Q01ValueClass)

add_dependencies(build-standard-tpch-tests RunQuery02)
add_dependencies(RunQuery02 Q02MinAgg)
add_dependencies(RunQuery02 Q02MinCostJoin)
add_dependencies(RunQuery02 Q02MinCostJoinOutput)
add_dependencies(RunQuery02 Q02MinCostPerTPCHPart)
add_dependencies(RunQuery02 Q02MinCostSelection)
add_dependencies(RunQuery02 Q02MinCostSelectionOutput)
add_dependencies(RunQuery02 Q02TPCHNationJoin)
add_dependencies(RunQuery02 Q02TPCHPartJoin)
add_dependencies(RunQuery02 Q02TPCHPartJoinOutput)
add_dependencies(RunQuery02 Q02TPCHPartJoinOutputIdentitySelection)
add_dependencies(RunQuery02 Q02TPCHPartSelection)
add_dependencies(RunQuery02 Q02TPCHPartSuppJoin)
add_dependencies(RunQuery02 Q02TPCHPartSuppJoinOutput)
add_dependencies(RunQuery02 Q02TPCHRegionSelection)
add_dependencies(RunQuery02 Q02TPCHSupplierJoin)
add_dependencies(RunQuery02 Q02TPCHSupplierJoinOutput)

add_dependencies(build-standard-tpch-tests RunQuery03)
add_dependencies(RunQuery03 Q03Agg)
add_dependencies(RunQuery03 Q03AggOut)
add_dependencies(RunQuery03 Q03TPCHCustomerSelection)
add_dependencies(RunQuery03 Q03Join)
add_dependencies(RunQuery03 Q03JoinOut)
add_dependencies(RunQuery03 Q03KeyClass)
add_dependencies(RunQuery03 Q03TPCHLineItemSelection)
add_dependencies(RunQuery03 Q03TPCHOrderSelection)

add_dependencies(build-standard-tpch-tests RunQuery04)
add_dependencies(RunQuery04 Q04Agg)
add_dependencies(RunQuery04 Q04AggOut)
add_dependencies(RunQuery04 Q04Join)
add_dependencies(RunQuery04 Q04TPCHOrderSelection)

add_dependencies(build-standard-tpch-tests RunQuery06)
add_dependencies(RunQuery06 Q06Agg)
add_dependencies(RunQuery06 Q06TPCHLineItemSelection)

add_dependencies(build-standard-tpch-tests RunQuery12)
add_dependencies(RunQuery12 Q12Agg)
add_dependencies(RunQuery12 Q12AggOut)
add_dependencies(RunQuery12 Q12Join)
add_dependencies(RunQuery12 Q12JoinOut)
add_dependencies(RunQuery12 Q12TPCHLineItemSelection)
add_dependencies(RunQuery12 Q12ValueClass)

add_dependencies(build-standard-tpch-tests RunQuery13)
add_dependencies(RunQuery13 Q13CountResult)
add_dependencies(RunQuery13 Q13TPCHCustomerDistribution)
add_dependencies(RunQuery13 Q13TPCHCustomerTPCHOrderJoin)
add_dependencies(RunQuery13 Q13TPCHCustomerTPCHOrders)
add_dependencies(RunQuery13 Q13TPCHOrderSelection)
add_dependencies(RunQuery13 Q13TPCHOrdersPerTPCHCustomer)

add_dependencies(build-standard-tpch-tests RunQuery14)
add_dependencies(RunQuery14 Q14Agg)
add_dependencies(RunQuery14 Q14AggOut)
add_dependencies(RunQuery14 Q14Join)
add_dependencies(RunQuery14 Q14JoinOut)
add_dependencies(RunQuery14 Q14TPCHLineItemSelection)
add_dependencies(RunQuery14 Q14ValueClass)

add_dependencies(build-standard-tpch-tests RunQuery17)
add_dependencies(RunQuery17 Q17JoinedTPCHPartTPCHLineItem)
add_dependencies(RunQuery17 Q17TPCHLineItemAvgQuantity)
add_dependencies(RunQuery17 Q17TPCHPartTPCHLineItemAvgJoin)
add_dependencies(RunQuery17 Q17TPCHPartTPCHLineItemIdentitySelection)
add_dependencies(RunQuery17 Q17TPCHPartTPCHLineItemJoin)
add_dependencies(RunQuery17 Q17TPCHPartSelection)
add_dependencies(RunQuery17 Q17PriceSum)

add_dependencies(build-standard-tpch-tests RunQuery22)
add_dependencies(RunQuery22 Q22AggregatedCntryBal)
add_dependencies(RunQuery22 Q22CntryBalAgg)
add_dependencies(RunQuery22 Q22CntryBalJoin)
add_dependencies(RunQuery22 Q22TPCHCustomerAccbalAvg)
add_dependencies(RunQuery22 Q22JoinedCntryBal)
add_dependencies(RunQuery22 Q22TPCHOrderCountPerTPCHCustomer)
add_dependencies(RunQuery22 Q22TPCHOrderCountSelection)
